<resources>
    <string name="app_name">Sistema de Alertas Meteorologicas
                                        SAM</string>


    <string name="action_settings">Settings</string>
    <string name="tus_alertas">Tus Alertas: </string>
    <string name="mediciones">Estas son las ultimas Mediciones: </string>
    <string name="generar_alerta">Generar tu Alerta </string>
    <string name="temperatura">Temperatura:     </string>
    <string name="humedad">Humedad Relativa:    </string>
    <string name="luz">Intensidad de la luz:    </string>
    <string name="registrar_alerta">Registrar una Alerta nueva </string>
    <string name="registrar">Registrar </string>
    <string name="actualizar">Actualizar </string>
    <string name="editar">Edita tu Alerta </string>
    <string name="eliminar">Eliminar </string>
    <string name="ver_alertas">Ver tus Alertas </string>
    <string name="ver_mediciones">Ver las últimas Mediciones </string>
    <string name="to"> To </string>
    <string name="nulo">   </string>
    <string name="carga_datos">Cargando Datos</string>
    <string name="etiqueta">Nombre:     </string>
    <string name="activar">Activar</string>
    <string name="activa">Activa</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>


</resources>
