<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gainsboro">

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:onClick="registrar"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/antiquewhite" />

    <TextView
        android:id="@+id/textViewAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/generar_alerta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/etiqueta"
                android:id="@+id/textView8" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_label_alerta"
                android:layout_column="1"
                android:layout_span="3"
                android:maxLines="1"
                android:maxLength="30"/>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="10dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatura"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_temp_bajo"
                android:layout_column="1"
                android:inputType="number"
                android:maxLength="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_temp_alto"
                android:inputType="number"
                android:maxLength="3"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humedad"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_humed_bajo"
                android:layout_column="1"
                android:inputType="number"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_humed_alto"
                android:inputType="number"
                android:maxLength="3"/>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luz"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:maxLength="30"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_luz_bajo"
                android:layout_column="1"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_luz_alto"
                android:inputType="number"
                android:maxLength="4"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activar"
                android:id="@+id/textView9" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioActivar"
                android:layout_column="1"
                android:onClick="activando"/>


        </TableRow>


    </TableLayout>

</RelativeLayout>